@@ -1,9 +1,11 @@
 // To compile do:
 //                  g++ --std=c++11 driver.cc
 
+//CODE
 #include <algorithm>
 #include <iterator>
 #include <iostream>
+#include <string>
 
 #include "../iterator"
 
@@ -16,7 +18,30 @@ int main()
             ostream_iterator<int>(cout, ", "));
     cout << '\n';
 
+    copy(Iterator<char>(*Iterator<char>::max() - 9), 
+            Iterator<char>::last(*Iterator<char>::max()), 
+            ostream_iterator<int>(cout, ", "));
+    cout << '\n';
+
+    cout << *Iterator<int>::max() << '\n';
+    copy(Iterator<int>(*Iterator<int>::max() - 9), 
+            Iterator<int>::last(*Iterator<int>::max()), 
+            ostream_iterator<int>(cout, ", "));
+    cout << '\n';
+
+    ReverseIterator<int> ri(20);
+    cout << *ri << ' ' << *ri << '\n';
+
     copy(ReverseIterator<int>(20), ReverseIterator<int>(10),
             ostream_iterator<int>(cout, ", "));
     cout << '\n';
+
+    std::string letters(Iterator<char>('a'), Iterator<char>::last('z'));
+    cout << letters << '\n';
+
+    std::string caps(ReverseIterator<char>::last('Z'), 
+                     ReverseIterator<char>('A'));
+    cout << caps << '\n';
+
 }
+//=
