@@ -1,5 +1,5 @@
 template <typename Type>
-inline bool Iterator<Type>::operator==(Iterator const &rhs) const
+inline bool Iterator<Type>::operator==(Iterator<Type> const &rhs) const
 {
     return d_value == rhs.d_value;
 }
