@@ -1,6 +1,8 @@
+bobcat (3.21.00)
 
-  * Added the class template ValueIterator
+  * Added the class templates Iterator and ReverseIterator
 
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 Feb 2014 12:25:07 +0100
 
 bobcat (3.20.01)
 
